reorganize nav to place two grids inside of the main flag grid; place dropdown menu as child to flag and update styling accordingly; spacing fixes

--- a/static/css/atoms.css
+++ b/static/css/atoms.css
@@ -52,7 +52,7 @@
   /* Subscriber color properties */
   --sub-blue: #0F1521;
   --sub-text-color: var(--white);
-  --sub-secondary-text-color: #ffd71a;
+  --sub-secondary-text-color: var(--gray);
 
   /* Link properties */
   --link-color: #132DAD;
